<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <FrameLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" >
            
            <TextView 
                android:id="@+id/exchange_rate_row_currency_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_small"
                android:textStyle="bold" />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/exchange_rates_fragment_default"
                android:textSize="@dimen/font_size_small"
                android:visibility="invisible" />
        </FrameLayout>
        
        <TextView 
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:text="@string/exchange_rates_fragment_rate"
            android:textSize="@dimen/font_size_normal" />
        
        <si.a.wiew.CurrencyTextView 
            android:id="@+id/exchange_rate_row_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="12dp"
            android:textSize="@dimen/font_size_normal" />
    
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
                
        <TextView 
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:text="@string/exchange_rates_fragment_balance"
            android:textSize="@dimen/font_size_normal" />
        
        <si.a.wiew.CurrencyTextView
            android:id="@+id/exchange_rate_row_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="12dp"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>
</LinearLayout>